{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 418,
  "lineage": "84bc6db3-2eec-d1cb-82c3-7f78398652e6",
  "resources": [
    {
      "module": "module.ec2_client",
      "mode": "managed",
      "type": "aws_instance",
      "name": "client_os",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-0338297b26d5d8db3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0338297b26d5d8db3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09dcbb0cff548fd0b",
            "private_dns": "ip-192-168-0-79.ap-south-1.compute.internal",
            "private_ip": "192.168.0.79",
            "public_ip": "65.0.95.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07f806a64c90f7f87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "Client"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_datanode.aws_instance.hadoop_os_slave",
            "module.ec2_jobtracker.aws_instance.hadoop_os_jobtracker",
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.ec2_tasktracker.aws_instance.hadoop_tasktracker",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_namenode",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hadoop_os",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-01adc69b57a33866f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01adc69b57a33866f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd498deb079a1a1c",
            "private_dns": "ip-192-168-0-32.ap-south-1.compute.internal",
            "private_ip": "192.168.0.32",
            "public_ip": "13.234.20.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c1e5326f405edeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "NameNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jobtracker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hadoop_os_jobtracker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-051b2c8a77f9a2989",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051b2c8a77f9a2989",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb0af74e87f90a39",
            "private_dns": "ip-192-168-0-42.ap-south-1.compute.internal",
            "private_ip": "192.168.0.42",
            "public_ip": "3.108.185.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce13eccad8061906",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "JobTracker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_datanode.aws_instance.hadoop_os_slave",
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_datanode",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hadoop_os_slave",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-0d9000a2af8886b81",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9000a2af8886b81",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058b9367cf2e3af8e",
            "private_dns": "ip-192-168-0-236.ap-south-1.compute.internal",
            "private_ip": "192.168.0.236",
            "public_ip": "65.0.29.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07df144cfc82eb0f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "DataNode 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-0b7c52b47b23f0ff0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7c52b47b23f0ff0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d7b5c73590e762b",
            "private_dns": "ip-192-168-0-233.ap-south-1.compute.internal",
            "private_ip": "192.168.0.233",
            "public_ip": "65.2.129.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e83db58937d1e796",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "DataNode 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-03e7477a51a25b3d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e7477a51a25b3d9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06afdf74b255c9969",
            "private_dns": "ip-192-168-0-41.ap-south-1.compute.internal",
            "private_ip": "192.168.0.41",
            "public_ip": "65.2.130.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da5e80a478338730",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "DataNode 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_tasktracker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hadoop_tasktracker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-071c3b549f60555f6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071c3b549f60555f6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08792098dac23de25",
            "private_dns": "ip-192-168-0-150.ap-south-1.compute.internal",
            "private_ip": "192.168.0.150",
            "public_ip": "15.207.108.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e9cb1f3246f0f87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "TaskTracker 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_datanode.aws_instance.hadoop_os_slave",
            "module.ec2_jobtracker.aws_instance.hadoop_os_jobtracker",
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-0325c9f6fa82d28ab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0325c9f6fa82d28ab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbaff3988215f9db",
            "private_dns": "ip-192-168-0-131.ap-south-1.compute.internal",
            "private_ip": "192.168.0.131",
            "public_ip": "13.233.212.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ff94c38be4b8ac8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "TaskTracker 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_datanode.aws_instance.hadoop_os_slave",
            "module.ec2_jobtracker.aws_instance.hadoop_os_jobtracker",
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045e6fa7127ab1ac4",
            "arn": "arn:aws:ec2:ap-south-1:265387499748:instance/i-0c5f689f246e5f90a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5f689f246e5f90a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_for_k8s_master",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc75c52ea91db754",
            "private_dns": "ip-192-168-0-30.ap-south-1.compute.internal",
            "private_ip": "192.168.0.30",
            "public_ip": "65.2.131.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014627705bc0605a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028149f39de06adb3",
            "tags": {
              "Name": "TaskTracker 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb43582abb41e176"
            ]
          },
          "dependencies": [
            "module.ec2_datanode.aws_instance.hadoop_os_slave",
            "module.ec2_jobtracker.aws_instance.hadoop_os_jobtracker",
            "module.ec2_namenode.aws_instance.hadoop_os",
            "module.keypair.tls_private_key.mynewkey_for_hadoop",
            "module.sg.aws_security_group.mysg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hadoop_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265387499748:internet-gateway/igw-00fab5fa970310fe0",
            "id": "igw-00fab5fa970310fe0",
            "owner_id": "265387499748",
            "tags": {
              "Name": "gw_for_hadoop"
            },
            "vpc_id": "vpc-0c95173e269bc9c4e"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265387499748:route-table/rtb-03319b9a313061b37",
            "id": "rtb-03319b9a313061b37",
            "owner_id": "265387499748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00fab5fa970310fe0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_for_hadoop"
            },
            "vpc_id": "vpc-0c95173e269bc9c4e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.hadoop_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054077da0a382c0c1",
            "route_table_id": "rtb-03319b9a313061b37",
            "subnet_id": "subnet-028149f39de06adb3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.hadoop_gateway",
            "module.vpc.aws_route_table.my_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265387499748:security-group/sg-0eb43582abb41e176",
            "description": "allow_traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb43582abb41e176",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50070
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_for_hadoop",
            "name_prefix": "",
            "owner_id": "265387499748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_hadoop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c95173e269bc9c4e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265387499748:subnet/subnet-028149f39de06adb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-028149f39de06adb3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "265387499748",
            "tags": {
              "Name": "subnet_for_hadoop"
            },
            "tags_all": {
              "Name": "subnet_for_hadoop"
            },
            "vpc_id": "vpc-0c95173e269bc9c4e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ownvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ownvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265387499748:vpc/vpc-0c95173e269bc9c4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d30b6cc51b95bcbe",
            "default_route_table_id": "rtb-0f4a3fb55bb0b935d",
            "default_security_group_id": "sg-0eda00297e29e9ded",
            "dhcp_options_id": "dopt-49689022",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c95173e269bc9c4e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f4a3fb55bb0b935d",
            "owner_id": "265387499748",
            "tags": {
              "Name": "vpc_for_hadoop"
            },
            "tags_all": {
              "Name": "vpc_for_hadoop"
            }
          }
        }
      ]
    }
  ]
}